# active-handout

./: .gitignore  404.html  README.md  exercise_data.json  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
assets/css/: devlife.css  fullpage.css  main.css  parsons.css
assets/js/: active-handout.4cbdc21e.js  main.js
assets_src/js/: active-handout.js  breakpoints.js  client-db.js  clipboard-code.js  dom-utils.js  main.js  style.js  telemetry.js  upload-indicator.js
content/: config.md  config.yml  index.md
content/js/: auth.js  counter.js  dom-confetti.js  long-questions.js  markdown-enhancer.js  modal-images.js  notification.js  notify-old-page.js  page-rating.js  progress-check.js  quiz.js  report.js  short-questions.js  slides.js  track-links.js  videos.js
content/reference/: parsons.md
examples/lecture_plus_handout/: index.html
examples/quiz_and_questions/: index.html
exercises_plugin/: setup.cfg
exercises_plugin/src/handout_exercises/: plugin.py
hooks/: custom_exercise.py
overrides/: 404.html  contributors.html  main.html
reference/advanced-editing/: index.html
reference/basic-editing/: index.html
reference/code-editor/: index.html
reference/custom-exercise/: index.html
reference/custom-variables/: index.html
reference/dashboard/: index.html
reference/exercise/: index.html
reference/extra-plugins/: index.html
reference/footnotes/: index.html
reference/long-questions/: index.html
reference/multiple-choice/: index.html
reference/notify-content-update/: index.html
(+67 files in other folders)
