[metadata]
name = active-handout-exercises-plugin
version = 0.0.1
author = Igor Montagner
author_email = igordsm@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    bs4

[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
    active-exercises = handout_exercises.plugin:FindExercises